--- a/Practice.ProblemSolving/Practice.ProblemSolving.csproj
+++ b/Practice.ProblemSolving/Practice.ProblemSolving.csproj
@@ -12,4 +12,8 @@
     <Folder Include="DataStructures\Easy\Trees\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
